--- a/index.html
+++ b/index.html
@@ -1,54 +1,41 @@
-<html>
-  <head>
-    <title>GeoGuessr Localisé</title>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>GeoGuessr personnalisé</title>
+  <style>
+    body { margin: 0; padding: 0; font-family: sans-serif; }
+    #menu {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 999;
+      background: white;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
+    }
+    #street-view { width: 100vw; height: 100vh; }
+  </style>
+</head>
+<body>
 
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
+  <div id="menu">
+    <label>Choisir une ville :</label>
+    <select id="city-select">
+      <option value="paris">Paris</option>
+      <option value="lyon">Lyon</option>
+      <option value="marseille">Marseille</option>
+      <option value="strasbourg">Strasbourg</option>
+    </select>
+    <button id="btn-random">Nouvelle position</button>
+  </div>
 
-      #menu {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        z-index: 999;
-        background: white;
-        padding: 10px;
-        border-radius: 8px;
-        box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
-      }
+  <div id="street-view"></div>
 
-      #street-view {
-        width: 100vw;
-        height: 100vh;
-      }
-    </style>
+  <!-- Google Maps API avec ta clé -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOXnj4r5TsVyxgqRIkT9DkD__AKt5JUXs&callback=initialize&v=weekly" defer></script>
+  <script type="module" src="./index.js"></script>
 
-    <script type="module" src="./index.js"></script>
-  </head>
-
-  <body>
-
-    <div id="menu">
-      <label>Choisir une ville :</label>
-      <select id="city-select">
-        <option value="paris">Paris</option>
-        <option value="lyon">Lyon</option>
-        <option value="marseille">Marseille</option>
-        <option value="strasbourg">Strasbourg</option>
-      </select>
-
-      <button id="btn-random">Nouvelle position</button>
-    </div>
-
-    <div id="street-view"></div>
-
-    <!-- Google Maps API -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=TA_CLE_API_ICI&callback=initialize&v=weekly"
-      defer
-    ></script>
-
-  </body>
+</body>
 </html>
