--- a/index.html
+++ b/index.html
@@ -2,83 +2,45 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>GeoGuessr personnalisé</title>
+  <title>GeoGuessr gratuit</title>
   <style>
-    body { margin: 0; padding: 0; font-family: sans-serif; }
-    #menu {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 999;
-      background: white;
-      padding: 10px;
-      border-radius: 8px;
-      box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
-    }
-    #street-view { width: 100vw; height: 100vh; }
+    body { margin: 0; }
+    iframe { width: 100vw; height: 100vh; border: none; }
   </style>
 </head>
 <body>
 
-<div id="menu">
-  <label>Choisir une ville :</label>
-  <select id="city-select">
-    <option value="paris">Paris</option>
-    <option value="lyon">Lyon</option>
-    <option value="marseille">Marseille</option>
-    <option value="strasbourg">Strasbourg</option>
-  </select>
-  <button id="btn-random">Nouvelle position</button>
-</div>
+<select id="city-select">
+  <option value="48.8566,2.3522">Paris</option>
+  <option value="45.7640,4.8357">Lyon</option>
+  <option value="43.2965,5.3698">Marseille</option>
+  <option value="48.5734,7.7521">Strasbourg</option>
+</select>
 
-<div id="street-view"></div>
+<button onclick="newPosition()">Nouvelle position</button>
 
-<!-- Google Maps API avec ta clé -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOXnj4r5TsVyxgqRIkT9DkD__AKt5JUXs&callback=initialize&v=weekly" defer></script>
+<iframe id="viewer"></iframe>
 
 <script>
-let panorama;
-
-// Limites géographiques
-const cityBounds = {
-  paris: { north: 48.9020, south: 48.8156, east: 2.4699, west: 2.2257 },
-  lyon: { north: 45.8357, south: 45.7076, east: 4.9446, west: 4.7681 },
-  marseille: { north: 43.3947, south: 43.2085, east: 5.5320, west: 5.2130 },
-  strasbourg: { north: 48.646, south: 48.519, east: 7.828, west: 7.664 }
-};
-
-// Fonction initiale appelée par Google Maps
-function initialize() {
-  panorama = new google.maps.StreetViewPanorama(
-    document.getElementById("street-view")
-  );
-
-  document.getElementById("btn-random").addEventListener("click", newPosition);
-  newPosition(); // Génère une position au chargement
+function randomPos(bounds) {
+  const lat = Math.random() * (bounds.n - bounds.s) + bounds.s;
+  const lng = Math.random() * (bounds.e - bounds.w) + bounds.w;
+  return `${lat},${lng}`;
 }
 
-// Génère une position aléatoire
+const bounds = {
+  paris: { n:48.9020, s:48.8156, e:2.4699, w:2.2257 },
+  lyon: { n:45.8357, s:45.7076, e:4.9446, w:4.7681 },
+  marseille:{ n:43.3947, s:43.2085, e:5.5320, w:5.2130 },
+  strasbourg:{ n:48.646, s:48.519, e:7.828, w:7.664 }
+};
+
 function newPosition() {
-  const city = document.getElementById("city-select").value;
-  const bounds = cityBounds[city];
-
-  const randomLat = Math.random() * (bounds.north - bounds.south) + bounds.south;
-  const randomLng = Math.random() * (bounds.east - bounds.west) + bounds.west;
-
-  const streetService = new google.maps.StreetViewService();
-
-  streetService.getPanorama(
-    { location: { lat: randomLat, lng: randomLng }, radius: 200 },
-    (data, status) => {
-      if (status === "OK") {
-        panorama.setPano(data.location.pano);
-        panorama.setPov({ heading: 0, pitch: 0 });
-        panorama.setVisible(true);
-      } else {
-        newPosition(); // relance si pas de Street View
-      }
-    }
-  );
+  const city = document.getElementById("city-select").selectedOptions[0].text.toLowerCase();
+  const pos = randomPos(bounds[city]);
+  
+  document.getElementById("viewer").src = 
+    `https://www.google.com/maps/embed?pb=!4v!6m8!1m3!1d1!2d${pos.split(",")[1]}!3d${pos.split(",")[0]}!3m2!1i1024!2i768!4f0`;
 }
 </script>
 
